# C2A

./: CMakeLists.txt  README.md
CCDDemo/: CMakeLists.txt  mainTorusknot.cpp  mainccd.h  model.cpp
dependencies/: CMakeLists.txt
include/C2A/: C2A.h  C2A_BV.h  C2A_Internal.h  C2A_RectDist.h  C2A_Tri.h  InterpMotion.h  InterpMotion.hbb  LinearMath.h  LinearMath.hbb  ListTri.h
src/: C2A.cpp  C2A_BV.cpp  C2A_Build.cpp  C2A_PQP.cpp  InterpMotion.cpp
